--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,6 +38,7 @@
   <div class="col-9">
     <app-dashboard></app-dashboard>
     <app-afficher></app-afficher>
+    <app-ajouter></app-ajouter>
 
   </div>
 </div>
