--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-center">
   <div class="col-2">
-    <h1 class="p-4 fw-bold textBlue"> APPLICATIONS </h1>
+    <h1 class="p-4  textBlue"> APPLICATIONS </h1>
   </div>
 </div>
 <div class="row align-content-around mb-5 mt-5">
