"ajout position fixe sur le menu"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <div class="row h-100 w-100">
   <div class="col-3">
-    <mat-toolbar color="primary" class="pt-1 ps-3 h-100">
+    <mat-toolbar color="primary" class="pt-1 ps-3 h-100 w-auto position-fixed ">
       <mat-toolbar-row class="mb-3 h2">
         <div class="icon">
           <mat-icon [inline]="true">assessment</mat-icon>
