--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
       </mat-toolbar-row>
 
 
-        <mat-toolbar-row id="home" class="active" (click)="selectedMenu('home')">
+        <mat-toolbar-row id="home" class="active" (click)="selectedMenu('home')" >
           <div class="mx-3">
             <mat-icon [inline]="true" >home</mat-icon>
           </div>
@@ -36,9 +36,7 @@
 
   </div>
   <div class="col-9">
-    <app-dashboard></app-dashboard>
-    <app-afficher></app-afficher>
-    <app-ajouter></app-ajouter>
+    <router-outlet></router-outlet>
 
   </div>
 </div>
