--- a/src/app/dashboard/table/table.component.html
+++ b/src/app/dashboard/table/table.component.html
@@ -11,13 +11,13 @@
       <!-- Note Column -->
       <ng-container matColumnDef="Note">
         <th mat-header-cell *matHeaderCellDef> Note</th>
-        <td mat-cell *matCellDef="let element"> {{element.datas[1].rating}}/{{maxRating}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.datas.rating}}/{{maxRating}} </td>
       </ng-container>
 
       <!-- Avis Column -->
       <ng-container matColumnDef="Avis">
         <th mat-header-cell *matHeaderCellDef> Avis</th>
-        <td mat-cell *matCellDef="let element"> {{element.datas[1].vote}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.datas.vote}} </td>
       </ng-container>
 
       <!-- Symbol Column -->
@@ -26,8 +26,8 @@
 
         <td mat-cell *matCellDef="let element">
           <div *ngFor="let source of element.sources">
-              <mat-icon class="icon" *ngIf="source.os.nom ==='android'">android</mat-icon>
-              <mat-icon *ngIf=" source.os.nom ==='iOS'">apple</mat-icon>
+            <mat-icon class="icon" *ngIf="source.os.nom ==='android'">android</mat-icon>
+            <mat-icon *ngIf=" source.os.nom ==='iOS'">apple</mat-icon>
           </div>
         </td>
       </ng-container>
