--- a/src/app/afficher/afficher.component.html
+++ b/src/app/afficher/afficher.component.html
@@ -3,56 +3,175 @@
     <p class="fs-3 pt-5 pb-5 textBlue ">Détail application</p>
   </div>
 </div>
+<ng-container *ngIf=" appIos != undefined && appAndroid != undefined else elseBlock">
+  <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
+    <mat-button-toggle value="bold" (click)="change('android')">Android</mat-button-toggle>
+    <mat-button-toggle value="italic" (click)="change('iOS')">iOS</mat-button-toggle>
+  </mat-button-toggle-group>
+    <div class="row justify-content-around">
+      <div class="col-3">
+        <mat-card class="pb-0">
+          <div class="row">
+            <p>Application :</p>
+          </div>
+          <div class="row justify-content-around">
 
-<div class="row justify-content-around">
-  <div class="col-3">
-    <mat-card class="pb-0">
-      <div class="row">
-        <p>Application :</p>
+            <p class="fs-5 col-6 mt-3 textBlue"><b>{{app.nom}}</b></p>
+          </div>
+        </mat-card>
       </div>
-      <div class="row justify-content-around">
 
-          <p class="fs-5 col-6 mt-3 textBlue"><b>Facebook</b></p>
+      <div class="col-3">
+        <mat-card class="pb-0">
+          <div class="row">
+            <p>Note Actuelle :</p>
+          </div>
+          <div class="row justify-content-around">
+
+            <p class="fs-5 col-4 mt-3 textBlue ">
+              <b>{{app.donnes[app.donnes.length - 1].rating}}</b>/ 5</p>
+          </div>
+        </mat-card>
       </div>
-    </mat-card>
-  </div>
 
-  <div class="col-3">
-    <mat-card class="pb-0">
-      <div class="row">
-        <p>Note Actuelle :</p>
+
+      <div class="col-3 pb-0">
+        <mat-card class="pb-0">
+          <div class="row">
+            <p>Avis reçus :</p>
+          </div>
+          <div class="row justify-content-around">
+
+            <p class="fs-5 col-4 mt-3 textBlue">
+              <b>{{app.donnes[app.donnes.length - 1].vote}}</b></p>
+          </div>
+        </mat-card>
       </div>
-      <div class="row justify-content-around">
 
-        <p class="fs-5 col-4 mt-3 textBlue "><b>4.7 </b>/ 5</p>
+      <div class="col-3 pb-0">
+        <mat-card>
+          <div class="row">
+            <p>OS :</p>
+          </div>
+          <div class="row justify-content-center">
+
+            <mat-icon class="icon mb-2 me-5" *ngIf="app.nom == 'iOS'">apple</mat-icon>
+            <mat-icon class="icon mb-2 me-5" *ngIf="app.nom == 'android'">android</mat-icon>
+          </div>
+        </mat-card>
       </div>
-    </mat-card>
-  </div>
+    </div>
+</ng-container>
 
+<ng-template #elseBlock>
+  <ng-container *ngIf="appIos != undefined">
+    <div class="row justify-content-around">
+      <div class="col-3">
+        <mat-card class="pb-0">
+          <div class="row">
+            <p>Application :</p>
+          </div>
+          <div class="row justify-content-around">
 
-  <div class="col-3 pb-0">
-    <mat-card class="pb-0">
-      <div class="row">
-        <p>Avis reçus :</p>
+            <p class="fs-5 col-6 mt-3 textBlue"><b>{{appIos.nom}}</b></p>
+          </div>
+        </mat-card>
       </div>
-      <div class="row justify-content-around">
 
-        <p class="fs-5 col-4 mt-3 textBlue"><b>2461823</b></p>
+      <div class="col-3">
+        <mat-card class="pb-0">
+          <div class="row">
+            <p>Note Actuelle :</p>
+          </div>
+          <div class="row justify-content-around">
+
+            <p class="fs-5 col-4 mt-3 textBlue ">
+              <b>{{appIos.donnes[appIos.donnes.length - 1].rating}}</b>/ 5</p>
+          </div>
+        </mat-card>
       </div>
-    </mat-card>
-  </div>
 
-  <div class="col-3 pb-0">
-    <mat-card>
-      <div class="row">
-        <p>OS :</p>
+
+      <div class="col-3 pb-0">
+        <mat-card class="pb-0">
+          <div class="row">
+            <p>Avis reçus :</p>
+          </div>
+          <div class="row justify-content-around">
+
+            <p class="fs-5 col-4 mt-3 textBlue">
+              <b>{{appIos.donnes[appIos.donnes.length - 1].vote}}</b></p>
+          </div>
+        </mat-card>
       </div>
-      <div class="row justify-content-center">
 
-        <mat-icon class="icon mb-2 me-5">apple</mat-icon>
+      <div class="col-3 pb-0">
+        <mat-card>
+          <div class="row">
+            <p>OS :</p>
+          </div>
+          <div class="row justify-content-center">
+
+            <mat-icon class="icon mb-2 me-5" *ngIf="appIos.nom == 'iOS'">apple</mat-icon>
+          </div>
+        </mat-card>
       </div>
-    </mat-card>
-  </div>
-</div>
+    </div>
+  </ng-container>
 
+  <ng-container *ngIf="appAndroid != undefined">
+    <div class="row justify-content-around">
+      <div class="col-3">
+        <mat-card class="pb-0">
+          <div class="row">
+            <p>Application :</p>
+          </div>
+          <div class="row justify-content-around">
+
+            <p class="fs-5 col-6 mt-3 textBlue"><b>{{appAndroid.nom}}</b></p>
+          </div>
+        </mat-card>
+      </div>
+
+      <div class="col-3">
+        <mat-card class="pb-0">
+          <div class="row">
+            <p>Note Actuelle :</p>
+          </div>
+          <div class="row justify-content-around">
+
+            <p class="fs-5 col-4 mt-3 textBlue ">
+              <b>{{appAndroid.donnes[appAndroid.donnes.length - 1].rating}}</b>/ 5</p>
+          </div>
+        </mat-card>
+      </div>
+
+
+      <div class="col-3 pb-0">
+        <mat-card class="pb-0">
+          <div class="row">
+            <p>Avis reçus :</p>
+          </div>
+          <div class="row justify-content-around">
+
+            <p class="fs-5 col-4 mt-3 textBlue">
+              <b>{{appAndroid.donnes[appAndroid.donnes.length - 1].vote}}</b></p>
+          </div>
+        </mat-card>
+      </div>
+
+      <div class="col-3 pb-0">
+        <mat-card>
+          <div class="row">
+            <p>OS :</p>
+          </div>
+          <div class="row justify-content-center">
+
+            <mat-icon class="icon mb-2 me-5" *ngIf="appAndroid.nom == 'android'">android</mat-icon>
+          </div>
+        </mat-card>
+      </div>
+    </div>
+  </ng-container>
+</ng-template>
 <app-graphe></app-graphe>
