--- a/src/app/dashboard/table/table.component.html
+++ b/src/app/dashboard/table/table.component.html
@@ -5,19 +5,19 @@
       <!-- Nom Column -->
       <ng-container matColumnDef="Nom">
         <th mat-header-cell *matHeaderCellDef> Nom</th>
-        <td mat-cell *matCellDef="let element"><a href="#">{{element.nom}}</a></td>
+        <td mat-cell *matCellDef="let element"><a href="#">{{element.nom_application}}</a></td>
       </ng-container>
 
       <!-- Note Column -->
       <ng-container matColumnDef="Note">
         <th mat-header-cell *matHeaderCellDef> Note</th>
-          <td mat-cell *matCellDef="let element"> {{element.datas.rating}}/{{maxRating}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.rating}}/{{maxRating}} </td>
       </ng-container>
 
       <!-- Avis Column -->
       <ng-container matColumnDef="Avis">
         <th mat-header-cell *matHeaderCellDef> Avis</th>
-        <td mat-cell *matCellDef="let element"> {{element.datas.vote}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.vote}} (+{{element.diff}}) </td>
       </ng-container>
 
       <!-- Symbol Column -->
@@ -25,13 +25,19 @@
         <th mat-header-cell *matHeaderCellDef> OS</th>
 
         <td mat-cell *matCellDef="let element">
-          <div *ngFor="let source of element.sources">
-            <mat-icon class="icon" *ngIf="source.os.nom ==='android'">android</mat-icon>
-            <mat-icon *ngIf=" source.os.nom ==='iOS'">apple</mat-icon>
-          </div>
+            <mat-icon class="icon" *ngIf="element.plateforme1 ==='android'">android</mat-icon>
+            <mat-icon  *ngIf="element.plateforme1 ==='iOS'">apple</mat-icon>
+            <mat-icon class="icon" *ngIf="element.plateforme2 ==='android'">android</mat-icon>
+            <mat-icon  *ngIf="element.plateforme2 ==='iOS'">apple</mat-icon>
         </td>
       </ng-container>
 
+      <ng-container matColumnDef="Detail">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-flat-button color="primary" (click)="redirection(element.id)"> Détail >> </button>
+        </td>
+      </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
