--- a/src/app/afficher/graphe/graphe.component.html
+++ b/src/app/afficher/graphe/graphe.component.html
@@ -1,16 +1,29 @@
-<div class="row mt-5">
-  <section>
-    <div class="row align-items-center">
-      <div class="col-2"><button mat-flat-button color="primary" (click)="changeToWeek()">1 Semaine</button></div>
-      <div class="col-2"><button mat-flat-button color="primary" (click)="changeToMonth()" >1 Mois</button></div>
-      <div class="col-2"><button mat-flat-button color="primary" (click)="changeToThreeMonth()">3 Mois</button></div>
-
+<ng-container *ngIf=" donnes != undefined ">
+<div class="row mt-5 justify-content-center">
+  <section class="col-4">
+    <div class="row ">
+      <div class="col-3 w-auto">
+        <button mat-flat-button color="primary" (click)="changeToWeek()">1 Semaine</button>
+      </div>
+      <div class="col-3 w-auto">
+        <button mat-flat-button color="primary" (click)="changeToMonth()">1 Mois</button>
+      </div>
+      <div class="col-3 w-auto">
+        <button mat-flat-button color="primary" (click)="changeToThreeMonth()">3 Mois</button>
+      </div>
     </div>
   </section>
-  <div class="col"><canvas id="my_first_chart" ></canvas></div>
+</div>
+</ng-container>
+<div class="row mt-5">
+  <div class="col">
+    <canvas id="my_first_chart"></canvas>
+  </div>
 </div>
 
 <div class="row mt-5">
 
-  <div class="col">  <canvas id="my_second_chart"></canvas></div>
+  <div class="col">
+    <canvas id="my_second_chart"></canvas>
+  </div>
 </div>
