--- a/src/app/ajouter/ajouter.component.html
+++ b/src/app/ajouter/ajouter.component.html
@@ -133,7 +133,7 @@
 
     <div class="row justify-content-center">
       <div class="col-10">
-        <div class="row fs-3 text-center mt-5"><p> Application ajouté avec succès !</p></div>
+        <div class="row fs-3 text-center mt-5"><p> Application ajoutée avec succès !</p></div>
       </div>
     </div>
     <div class="row justify-content-center">
