"Factorisation de la fonction change dans classe graphe"

--- a/src/app/afficher/graphe/graphe.component.html
+++ b/src/app/afficher/graphe/graphe.component.html
@@ -3,13 +3,13 @@
   <section class="col-4">
     <div class="row ">
       <div class="col-3 w-auto">
-        <button mat-flat-button color="primary" (click)="changeToWeek()">1 Semaine</button>
+        <button mat-flat-button color="primary" (click)="change('week')">1 Semaine</button>
       </div>
       <div class="col-3 w-auto">
-        <button mat-flat-button color="primary" (click)="changeToMonth()">1 Mois</button>
+        <button mat-flat-button color="primary" (click)="change('month')">1 Mois</button>
       </div>
       <div class="col-3 w-auto">
-        <button mat-flat-button color="primary" (click)="changeToThreeMonth()">3 Mois</button>
+        <button mat-flat-button color="primary" (click)="change('threeMonth')">3 Mois</button>
       </div>
     </div>
   </section>
